--- a/projetos-api/src/main/resources/application.properties
+++ b/projetos-api/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 
 logging.level.org.springframework.web=TRACE
 logging.level.org.hibernate=TRACE
