--- a/projetos-api/src/main/resources/application.properties
+++ b/projetos-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/portifolio
+spring.datasource.url=jdbc:postgresql://localhost:5432/portfolio
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
